# wasi-nn-experiment

./: .gitmodules  Cargo.toml  README.md  crates.js  index.html  my-thoughts.md  settings.html  source-files.js
addr2line/: fn.demangle.html  fn.demangle_auto.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html
anyhow/: struct.Error.html
arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html
backtrace/: enum.PrintFmt.html  fn.resolve_frame.html
bitvec/: index.html
cranelift_codegen/: constant.VERSION.html  struct.Context.html  (+3 more)
host/: Cargo.toml  all.html  constant.DEFAULT_FILTER.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
host/metadata/: constant.DOC_TEXT.html  fn.document.html  index.html
host/src/: lib.rs  main.rs  world.rs
host/types/: enum.ExecutionTarget.html  enum.GraphEncoding.html  enum.NnErrno.html  enum.TensorType.html  index.html  sidebar-items.js  struct.Graph.html  struct.GraphExecutionContext.html  struct.Tensor.html  trait.UserErrorConversion.html  type.BufferSize.html  type.GraphBuilder.html  type.GraphBuilderArray.html  type.TensorData.html  type.TensorDimensions.html
host/wasi_ephemeral_nn/: fn.add_to_linker.html  fn.compute.html  fn.get_output.html  fn.init_execution_context.html  fn.load.html  fn.set_input.html  index.html  sidebar-items.js  trait.WasiEphemeralNn.html
host/world/: index.html  sidebar-items.js  struct.ExecutionContext.html  struct.WasiNnCtx.html  struct.World.html
(+48875 files in other folders)
