[package]
name = "host"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
env_logger = "0.9.0"
log = "0.4.14"
structopt = "0.3.25"
wasmtime = "0.30.0"
wiggle = "0.30.0"
